--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,12 @@
-mlflow==2.4
-cloudpickle==2.2.1
-configparser==5.3.0
-importlib-metadata==4.11.3
+mlflow==2.4.1
 numpy==1.23.5
 psutil==5.9.0
 scikit-learn==1.2.0
 scipy==1.9.3
-os
-pickle
-prefect
-prefect_email
-optuna
-datetime
-sys
-time
-random
-logging 
-psycopg
-joblib
-evidently
-psycopg_binary
-tqdm
-requests
+pandas==2.0.2 
+prefect==2.11.1
+prefect_email==0.2.2
+optuna==3.2.0
+evidently==0.4.1
+psycopg2==2.9.7
+pre-commit==3.3.3
